--- a/MagicItemShop.Web/Pages/Shared/_Layout.cshtml
+++ b/MagicItemShop.Web/Pages/Shared/_Layout.cshtml
@@ -3,6 +3,23 @@
     <head>
         <title>@ViewData["Title"]</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fondamento:ital@0;1&display=swap">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@mdi/font@6.6.96/css/materialdesignicons.min.css">
+
+        <link rel="stylesheet" href="~/css/fonts.css">
+
+        <style>
+            body {
+                font-family:  'ScalaSans', sans-serif;
+            }
+            
+            a[href] {
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
         @RenderBody()
