--- a/MagicItemShop.Web/Pages/Index.cshtml
+++ b/MagicItemShop.Web/Pages/Index.cshtml
@@ -1,62 +1,112 @@
 ﻿@page
 @using MagicItemShop.Web.DMPG.Models
+@using MagicItemShop.Web.Extensions
 @using MagicItemShop.Web.Pages
 @using Newtonsoft.Json
+@using Newtonsoft.Json.Converters
+@using Newtonsoft.Json.Linq
 
 @model IndexModel
 
 @{
     ViewData["Title"] = "Home page";
-
-    var RARITY_COLORS = new Dictionary<MagicItemRarity, string>
-    {
-        { MagicItemRarity.Common, "DarkSlateGray" },
-        { MagicItemRarity.Uncommon, "SteelBlue" },
-        { MagicItemRarity.Rare, "Gold" },
-        { MagicItemRarity.VeryRare, "DarkOrange" },
-        { MagicItemRarity.Legendary, "Magenta" },
-        { MagicItemRarity.Artifact, "MediumSeaGreen" },
-        { MagicItemRarity.Varies, "Teal" }
-    };
 }
 
-<div class="container-fluid">
+<style>
+    .rarity--Common {
+        color: #8a4f4f;
+    }
+    .rarity--Uncommon {
+        color: #4a7094;
+    }
+    .rarity--Rare {
+        color: #ecc100;
+    }
+    .rarity--VeryRare {
+        color: #e17203;
+    }
+    .rarity--Legendary {
+        color: #e3003d;
+    }
+    .rarity--Artifact {
+        color: #009f9f;
+    }
+    .rarity--Varies {
+        color: #84cb98;
+    }
+    
+    .magic-items-table {
+        font-size: 18px;
+    }
+    
+    .magic-items-table th {
+        font-size: 125%;
+    }
+    
+    .magic-items-table th,
+    .magic-items-table td {
+        padding: 0.5rem 1rem;
+    }
+    
+    .magic-items-table th.rarity,
+    .magic-items-table td.rarity {
+        width: 120px;
+    }
+    
+    .magic-items-table > tbody > tr:nth-of-type(2n+1) > * {
+        background-color: rgba(80, 20, 0, 0.025);
+    }
+</style>
+
+<div class="container">
     @foreach (var shop in Model.MagicItemShops)
     {
-        var itemsJsonList = JsonConvert.DeserializeObject<List<Dictionary<string, string>>>(JsonConvert.SerializeObject(shop.Inventory))!;
+        <section class="mt-5">
+            <h1 class="h2 text-center">
+                @shop.Name
+            </h1>
 
-        <h3>
-            @shop.Name
-        </h3>
-
-        <table class="table table-bordered">
-            <!-- Header Row -->
-            <tr>
-                @foreach (var property in itemsJsonList[0].Keys)
-                {
-                    <th>
-                        @property
-                    </th>
-                }
-            </tr>
-
-            <!-- Item Rows -->
-            @foreach (var item in itemsJsonList)
-            {
-                var shopItem = shop.Inventory.FirstOrDefault(x => x.Name == item["Name"]);
-                var keys = item.Keys.ToArray();
-
+            <table class="table magic-items-table">
+                <!-- Header Row -->
                 <tr>
-                    @for (var i = 0; i < keys.Length; i++)
-                    {
-                        var key = keys[i];
-
-                        <td class="@(i == 0 ? "fw-bold" : "")" style="color: @(i == 0 ? RARITY_COLORS[shopItem.Rarity] : "inherit")">
-                            @item[key]
-                        </td>
-                    }
+                    <th>Name</th>
+                    <th class="rarity">Rarity</th>
+                    <th>Type</th>
+                    <th>Source</th>
+                    <th>Price</th>
                 </tr>
-            }
-        </table>
+
+                <!-- Item Rows -->
+                @foreach (var item in shop.Inventory)
+                {
+                    <tr>
+                        <td class="rarity--@item.Rarity">
+                            <a href="@item.Url" target="_blank" class="fw-bold" style="color: inherit">
+                                @item.Name
+
+                                <i class="mdi mdi-open-in-new" style="font-size: 80%; vertical-align: text-bottom;"></i>
+                            </a>
+                        </td>
+                        <td class="rarity rarity--@item.Rarity">
+                            @item.Rarity.ToEnumMemberName()
+                        </td>
+                        <td>
+                            @item.Type.ToEnumMemberName()
+                            @if (item.RequiresAttunement)
+                            {
+                                <i>&mdash; requires attunement</i>
+                            }
+                        </td>
+                        <td>
+                            @item.Source.ToEnumMemberName()
+                        </td>
+                        <td>
+                            <img src="~/images/gold_coin_single.png" alt="Gold Piece" width="25" style="vertical-align: top">
+                            @item.Price gp
+                        </td>
+                    </tr>
+                }
+            </table>
+        </section>
     }
 </div>
