--- a/MagicItemShop.Web/wwwroot/css/fonts.css
+++ b/MagicItemShop.Web/wwwroot/css/fonts.css
@@ -20,3 +20,26 @@
     font-weight: bold;
     font-style: italic;
 }
+
+@font-face {
+    font-family: "Draconis";
+    src: url("../fonts/Draconis.ttf") format("truetype");
+    font-weight: normal;
+}
+@font-face {
+    font-family: "Draconis";
+    src: url("../fonts/DraconisBold.ttf") format("truetype");
+    font-weight: bold;
+}
+@font-face {
+    font-family: "Draconis";
+    src: url("../fonts/DraconisItalic.ttf") format("truetype");
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Draconis";
+    src: url("../fonts/DraconisBoldItalic.ttf") format("truetype");
+    font-weight: bold;
+    font-style: italic;
+}
