moved the core generators and data sources into own class library

--- a/MagicItemShop.Web/Pages/Index.cshtml
+++ b/MagicItemShop.Web/Pages/Index.cshtml
@@ -1,11 +1,6 @@
 ﻿@page
-@using MagicItemShop.Web.DMPG.Models
-@using MagicItemShop.Web.Extensions
+@using MagicItemShop.Core.Extensions
 @using MagicItemShop.Web.Pages
-@using Newtonsoft.Json
-@using Newtonsoft.Json.Converters
-@using Newtonsoft.Json.Linq
-
 @model IndexModel
 
 @{
