--- a/MagicItemShop.Web/wwwroot/css/fonts.css
+++ b/MagicItemShop.Web/wwwroot/css/fonts.css
@@ -1,45 +1,45 @@
 @font-face {
     font-family: "ScalaSans";
-    src: url("../fonts/ScalaSansOffc.ttf") format("truetype");
+    src: url("/fonts/ScalaSansOffc.ttf") format("truetype");
     font-weight: normal;
 }
 @font-face {
     font-family: "ScalaSans";
-    src: url("../fonts/ScalaSansOffc-Bold.ttf") format("truetype");
+    src: url("/fonts/ScalaSansOffc-Bold.ttf") format("truetype");
     font-weight: bold;
 }
 @font-face {
     font-family: "ScalaSans";
-    src: url("../fonts/ScalaSansOffc-Ita.ttf") format("truetype");
+    src: url("/fonts/ScalaSansOffc-Ita.ttf") format("truetype");
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: "ScalaSans";
-    src: url("../fonts/ScalaSansOffc-BoldIta.ttf") format("truetype");
+    src: url("/fonts/ScalaSansOffc-BoldIta.ttf") format("truetype");
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
     font-family: "Draconis";
-    src: url("../fonts/Draconis.ttf") format("truetype");
+    src: url("/fonts/Draconis.ttf") format("truetype");
     font-weight: normal;
 }
 @font-face {
     font-family: "Draconis";
-    src: url("../fonts/DraconisBold.ttf") format("truetype");
+    src: url("/fonts/DraconisBold.ttf") format("truetype");
     font-weight: bold;
 }
 @font-face {
     font-family: "Draconis";
-    src: url("../fonts/DraconisItalic.ttf") format("truetype");
+    src: url("/fonts/DraconisItalic.ttf") format("truetype");
     font-weight: normal;
     font-style: italic;
 }
 @font-face {
     font-family: "Draconis";
-    src: url("../fonts/DraconisBoldItalic.ttf") format("truetype");
+    src: url("/fonts/DraconisBoldItalic.ttf") format("truetype");
     font-weight: bold;
     font-style: italic;
 }
